--- a/config/xn2/simple.yml
+++ b/config/xn2/simple.yml
@@ -6,57 +6,57 @@
   # concurrently pull the following endpoints
   endpoints:
     - name: sec
-      url: http://localhost:8080/second
+      url: http://fxapi:8080/second
       # number, string
       type: number
       metric: gauge
     - name: time
-      url: http://localhost:8080/epoch
+      url: http://fxapi:8080/epoch
       type: number
       metric: gauge
     - name: curve_a
       description: "The a curve"
-      url: http://localhost:8080/curve/1200/10/0
+      url: http://fxapi:8080/curve/1200/10/0
       type: number
       metric: gauge
     - name: curve_b
       description: "The b curve"
-      url: http://localhost:8080/curve/1/0/4
+      url: http://fxapi:8080/curve/1/0/4
       type: number
       metric: gauge
     - name: lorem
-      url: http://localhost:8080/lorem
+      url: http://fxapi:8080/lorem
       type: text
       metric: none
   dest:
-    url: "http://localhost:9898/rx/set_one/metrics/"
+    url: "http://rxtx:9898/rx/set_one/metrics/"
     method: POST
 -
   name: set_two
   frequency: 10
   endpoints:
     - name: sec
-      url: http://localhost:8080/second
+      url: http://fxapi:8080/second
       type: number
       metric: gauge
     - name: time
-      url: http://localhost:8080/epoch
+      url: http://fxapi:8080/epoch
       type: number
       metric: gauge
     - name: curve_a
       description: "The a curve"
-      url: http://localhost:8080/curve/100/5/0
+      url: http://fxapi:8080/curve/100/5/0
       type: number
       metric: gauge
     - name: curve_b
       description: "The b curve"
-      url: http://localhost:8080/curve/1/0/4
+      url: http://fxapi:8080/curve/1/0/4
       type: number
       metric: gauge
     - name: lorem
-      url: http://localhost:8080/lorem
+      url: http://fxapi:8080/lorem
       type: text
       metric: none
   dest:
-    url: "http://localhost:9898/rx/set_two/metrics/"
+    url: "http://rxtx:9898/rx/set_two/metrics/"
     method: POST
