--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -9,6 +9,7 @@ global:
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
+  # Monitor Prometheus
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
 
@@ -18,6 +19,8 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  # Monitor rxtx. rxtx receives data from xn2, buffers and batches the data and sends
+  # the batches to rtbeat
   - job_name: 'rxtx'
 
     # Override the global default and scrape targets from this job every 5 seconds.
@@ -26,6 +29,7 @@ scrape_configs:
     static_configs:
       - targets: ['rxtx:9898']
 
+  # monitor the fake api
   - job_name: 'fxapi'
 
     # Override the global default and scrape targets from this job every 5 seconds.
@@ -33,3 +37,21 @@ scrape_configs:
 
     static_configs:
       - targets: ['fxapi:8080']
+
+  # monitor xn2
+  - job_name: 'xn2'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+
+    static_configs:
+      - targets: ['xn2:8888']
+
+  # monitor rtbeat
+  - job_name: 'rtbeat'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+
+    static_configs:
+      - targets: ['rtbeat:7070']
