--- a/config/xn2/simple.yml
+++ b/config/xn2/simple.yml
@@ -1,7 +1,6 @@
 -
-  # metric are stored xer_[name]_[endpoint_name] in this example
-  # curve_a would product a counter metric named xer_set_one_curve_a
-  name: set_one
+  # example metric xer_ep_curve_a{instance="xn2:8888",job="xn2",set="alpha"}
+  name: alpha
   frequency: 5
   # concurrently pull the following endpoints
   endpoints:
@@ -17,6 +16,7 @@
     - name: curve_a
       description: "The a curve"
       url: http://fxapi:8080/curve/1200/10/0
+      # example metric xer_ep_curve_a{instance="xn2:8888",job="xn2",set="alpha"}
       type: number
       metric: gauge
     - name: curve_b
@@ -32,7 +32,7 @@
     url: "http://rxtx:9898/rx/set_one/metrics/"
     method: POST
 -
-  name: set_two
+  name: beta
   frequency: 10
   endpoints:
     - name: sec
@@ -50,7 +50,7 @@
       metric: gauge
     - name: curve_b
       description: "The b curve"
-      url: http://fxapi:8080/curve/1/0/4
+      url: http://fxapi:8080/curve/1/2/4
       type: number
       metric: gauge
     - name: lorem
