--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -55,3 +55,12 @@ scrape_configs:
 
     static_configs:
       - targets: ['rtbeat:7070']
+
+  # monitor grafana
+  - job_name: 'grafana'
+
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+
+    static_configs:
+      - targets: ['grafana:9090']
